test/bad/generics/call08.px

func f<A>(g: A->A, x: A) def
    return

f(2/_, 1)
